# cram_bridge

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  robosherlock-process-module.asd  stack.xml
cram_acl/: CMakeLists.txt  cram-acl.asd  package.xml
cram_acl/src/: acl.lisp  base.lisp  kqml.lisp  package.lisp  ros.lisp
cram_beasty/: CMakeLists.txt  cram-beasty.asd  manifest.xml
cram_beasty/asdf/: beasty-command-interface-examples.asd  beasty-command-interface.asd  cram-beasty.asd
cram_beasty/src/: action-interface.lisp  beasty-command-interface-examples.asd  beasty-command-interface.asd  beasty-robot.lisp  client-interface.lisp  control-parameters.lisp  conversions.lisp  data-structures.lisp  defaults.lisp  gravity-compensation.lisp  interface.lisp  login.lisp  package.lisp  params.lisp  safety-settings.lisp  test-data.lisp  utils.lisp  visualization.lisp
cram_beasty/src/beasty-command-interface/: action-interface.lisp  client-interface.lisp  conversions.lisp  data-structures.lisp  defaults.lisp  package.lisp  params.lisp  safety-settings.lisp  utils.lisp
cram_beasty/src/beasty-command-interface-examples/: boxy-right-arm.lisp  on-table.lisp  package.lisp  test-data.lisp  utils.lisp
cram_beliefstate/: CMakeLists.txt  README.md  cram-beliefstate.asd  mainpage.dox  manifest.xml  package.xml
cram_beliefstate/asdf/: cram-beliefstate.asd
cram_beliefstate/src/: beliefstate.lisp  hooks.lisp  interactive-control.lisp  package.lisp  predict.lisp
cram_bridge/: CMakeLists.txt  package.xml
cram_fccl/: CMakeLists.txt  cram-fccl-tests.asd  cram-fccl.asd  manifest.xml  package.xml
cram_fccl/asdf/: cram-fccl.asd
cram_fccl/src/: action-client.lisp  action-interface.lisp  conversions.lisp  datatypes.lisp  package.lisp  publisher-interface.lisp  samples.lisp  tests.lisp
cram_fccl/test/: message-conversions.lisp  package.lisp
cram_fingertips/: CMakeLists.txt  cram-fingertips.asd  mainpage.dox  manifest.xml  package.xml
cram_fingertips/asdf/: cram-fingertips.asd
cram_fingertips/src/: fingertips.lisp  package.lisp
cram_ik_proxy/: CMakeLists.txt  cram-ik-proxy.asd  manifest.xml  package.xml
cram_ik_proxy/asdf/: cram-ik-proxy.asd
cram_ik_proxy/src/: ik-client-interface.lisp  ik-client.lisp  package.lisp  utils.lisp
cram_json_pl_client/: cram-json-pl-client.asd  manifest.xml
cram_json_pl_client/asdf/: cram-json-pl-client.asd
cram_json_pl_server/: cram-json-pl-server.asd  manifest.xml
cram_json_pl_server/asdf/: cram-json-pl-server.asd
cram_moveit/: CMakeLists.txt  cram-moveit.asd  mainpage.dox  manifest.xml  package.xml
cram_moveit/asdf/: cram-moveit.asd
cram_moveit/src/: collision-environment.lisp  display.lisp  failures.lisp  joint-states.lisp  moveit.lisp  package.lisp  planning-scene.lisp  ros.lisp  utils.lisp
cram_pr2_controllers/: CMakeLists.txt  cram-pr2-controllers-examples.asd  cram-pr2-controllers.asd  manifest.xml  package.xml
cram_pr2_controllers/asdf/: cram-pr2-controllers.asd
cram_pr2_controllers/src/: arm-position-controllers.lisp  controller-manager.lisp  package.lisp  point-head-controllers.lisp
cram_pr2_controllers/src/cram-pr2-controllers/: arm-position-controllers.lisp
cram_pr2_controllers/src/cram-pr2-controllers-examples/: arm-position-controllers-examples.lisp  package.lisp
cram_pr2_controllers_examples/: CMakeLists.txt  README.md  cram-pr2-controllers-examples.asd  package.xml
cram_pr2_controllers_examples/asdf/: cram-pr2-controllers-examples.asd
cram_pr2_controllers_examples/src/: arm-position-controllers-examples.lisp
cram_ptu/: CMakeLists.txt  cram-ptu.asd  manifest.xml  package.xml
cram_ptu/asdf/: cram-ptu.asd
cram_ptu/scrips/: tf-relay-server.py
cram_ptu/src/: package.lisp  ptu-client.lisp  ptu-interface.lisp  utils.lisp
cram_tf_relay/: manifest.xml
cram_tf_relay/asdf/: cram-tf-relay.asd
cram_uima/: CMakeLists.txt  README.md  cram-uima.asd  mainpage.dox  manifest.xml  package.xml
cram_uima/asdf/: cram-uima.asd
cram_uima/src/: package.lisp  uima-action-interface.lisp  uima.lisp
cram_wsg50/: CMakeLists.txt  README.md  cram-dlr-wsg50.asd  cram-wsg50.asd  manifest.xml  package.xml
cram_wsg50/asdf/: cram-wsg50.asd
cram_wsg50/dlr_wsg50/: handle.lisp  package.lisp
cram_wsg50/src/: client-interface.lisp  client.lisp  package.lisp  parameters.lisp  wsg50-handle.lisp
robosherlock_process_module/: mainpage.dox  robosherlock-process-module.asd
robosherlock_process_module/asdf/: robosherlock-process-module.asd
robosherlock_process_module/src/: action-designator.lisp  interface.lisp
src/: action-designator.lisp  facts.lisp  interface.lisp  package.lisp  process-module.lisp
