<package>
  <name>cram_beliefstate</name>
  <version>1.0.0</version>
  <description>
    
    To be able to use this package, you will need the following dependencies:

      * designator_integration_lisp: https://github.com/code-iai/designator_integration
      * iai_common_msgs: https://github.com/code-iai/iai_common_msgs
      * semrec: https://github.com/code-iai/semrec

  </description>
  
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  
  <license>BSD</license>
  
  <url>http://ros.org/wiki/cram_beliefstate</url>
  
  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Dependencies needed to compile this package. -->
  <build_depend>roslisp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cram_language</build_depend>
  <build_depend>designator_integration_lisp</build_depend>
  
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roslisp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>cram_language</run_depend>
  <run_depend>designator_integration_lisp</run_depend>

</package>
