<package>
  <name>cram_fingertips</name>
  <version>1.0.0</version>
  <description>

     cram_fingertips

  </description>
  <author>Jan Winkler</author>
  <maintainer email="mustermann@fictional.de">Add Maintainer here</maintainer>
  <license>BSD</license>
  
  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2_msgs</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>roslisp_utilities</build_depend>
  <build_depend>cram_language</build_depend>
  <build_depend>cram_reasoning</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_msgs</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>roslisp_utilities</run_depend>
  <run_depend>cram_language</run_depend>
  <run_depend>cram_reasoning</run_depend>

</package>
