<package>
  <name>cram_ik_proxy</name>
  <version>1.0.0</version>
  <description>

     CRAM interface package to IK services for arms.

  </description>
  <author>Georg Bartels</author>
  <maintainer email="mustermann@fictional.de">Add Maintainer here</maintainer>
  <license>BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>sbcl</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>cl_tf</build_depend>
  <build_depend>iai_kinematics_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sbcl</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>cl_tf</run_depend>
  <run_depend>iai_kinematics_msgs</run_depend>

</package>
