<?xml version="1.0"?>
<package>
  <name>cram_moveit</name>
  <version>0.0.0</version>
  <description>
    CRAM MoveIt! interface module
  </description>
  
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>moveit_msgs</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roslisp_utilities</build_depend>
  <build_depend>cl_tf2</build_depend>
  <build_depend>ubiquitous_utilities</build_depend>
  
  <run_depend>moveit_msgs</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roslisp_utilities</run_depend>
  <run_depend>cl_tf2</run_depend>
  <run_depend>ubiquitous_utilities</run_depend>
</package>
