<package>
  <name>cram_pr2_controllers</name>
  <version>1.0.0</version>
  <description>
     Interface package between CRAM and standard PR2 controllers.
  </description>
  <author>Georg Bartels</author>
  <maintainer email="mustermann@fictional.de">Add Maintainer here</maintainer>
  <license>BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>sbcl</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>actionlib_lisp</build_depend>
  <build_depend>cl_tf</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>pr2_controller_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sbcl</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>actionlib_lisp</run_depend>
  <run_depend>cl_tf</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>pr2_controller_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

</package>
