<package>
  <name>cram_uima</name>
  <version>1.0.0</version>
  <description>
    
    To be able to use this package, you will need the following dependencies:

      * designator_integration_lisp: https://github.com/code-iai/designator_integration_lisp
      * iai_common_msgs: https://github.com/code-iai/iai_common_msgs
    
  </description>
  <author>Jan Winkler</author>
  <maintainer email="mustermann@fictional.de">Add Maintainer here</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/cram_uima</url>
  
  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslisp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roslisp_utilities</build_depend>
  <build_depend>designator_integration_lisp</build_depend>
  <build_depend>designator_integration_msgs</build_depend>
  <build_depend>iai_common_msgs</build_depend>

  <run_depend>roslisp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roslisp_utilities</run_depend>
  <run_depend>designator_integration_lisp</run_depend>
  <run_depend>designator_integration_msgs</run_depend>
  <run_depend>iai_common_msgs</run_depend>
  
</package>
