<package>
  <name>cram_wsg50</name>
  <version>1.0.0</version>
  <description>

     CRAM interface package to command Schunk WSG50 gripper.

  </description>
  <author>Georg Bartels</author>
  <maintainer email="mustermann@fictional.de">Add Maintainer here</maintainer>
  <license>BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>sbcl</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>wsg_50_common</build_depend>
  <build_depend>std_srvs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sbcl</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>wsg_50_common</run_depend>
  <run_depend>std_srvs</run_depend>

</package>


